Topic: Testing Commit Template
Description:
  * Set .gittemplate to default commit template
  * Set vim as default text editor

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-    name  = Greg Thomsen
-    email = gthomsen@gmail.com
+    name  = Zac Pyle
+    email = zpyle8687@sdsu.edu
 
 [alias]
     com  = commit
