--- a/.gitconfig
+++ b/.gitconfig
@@ -12,7 +12,7 @@
     default = simple
 
 [commit]
-    template = ~/.gittemplate
+    template = ~/ConfigFiles/.gittemplate
 
 [init]
     defaultBranch = main
